Fixed weird stretching of page horizontally

--- a/src/app/components/about-container/about-card/about-card.component.css
+++ b/src/app/components/about-container/about-card/about-card.component.css
@@ -1,5 +1,5 @@
 .card-title {
-    justify-content: center;
+    text-align: center;
 }
 
 .card-headshot {
